Slight refactor of McVGuiUtils [0]
Javadoc improvements primarily, though I did start using the newer
"instanceof" syntax that was introduced in Java 16. Pretty nice!

https://openjdk.org/jeps/394